# mimoe-edge-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
agent/: client.py  conversation.py  modes.py
agent/utils/: terminal.py
tests/: test_client.py  test_conversation.py  test_main.py  test_modes.py  test_terminal.py
tests/integration/: conftest.py  test_endpoint.py
