[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimoe-edge-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires a live mimOE Studio instance (run with: pytest -m integration)",
]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["agent", "main"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes (unused imports = F401)  I: isort
select = ["E", "F", "I", "W"]
